--- a/package.json
+++ b/package.json
@@ -108,8 +108,8 @@
 {
   "scripts": {
     "dev": "vite",
-    "build": "vite build",          // <— only build the client
-    "build: web": "vite build",      // (optional) alt name if you want
+    "build": "vite build",          
+    "build: web": "vite build",     
     "preview": "vite preview --port 4173"
   }
 }
